<resources>
    <string name="app_name">appAdminCalzado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="User_Name">Nombre de Usuario</string>
    <string name="E_maill">Correo Electronico</string>
    <string name="logo_principal">logo principal</string>
    <string name="login">Login / ingresar</string>
    <string name="si_aun_no_tiene_una_cuenta">si aun no tiene una cuenta</string>
    <string name="contacte_con_el_administrador">contacte con su administrador</string>
    <string name="contrasena">contraseña</string>
    <string name="contenedo_de_items">contenedo-de-items</string>
    <string name="productos_terminados">productos terminados</string>
    <string name="productos_en_proceso">productos en proceso</string>
    <string name="maquinas_herramientas">Maquinas/herramientas</string>
    <string name="materiales_indirectos">Materiales indirectos</string>
    <string name="materiales_directos">Materiales directos</string>
    <string name="registro_de_materiales">registro de materiales</string>
</resources>