<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.Almacen.almacenMenu">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_mat_directo"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:text="@string/materiales_directos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_mat_indirecto"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/materiales_indirectos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mat_directo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_prod_proceso"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/productos_en_proceso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_mat_indirecto" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_prod_terminado"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/productos_terminados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_prod_proceso" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_mro"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/maquinas_herramientas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_prod_terminado"
        app:layout_constraintVertical_bias="0.178" />

</androidx.constraintlayout.widget.ConstraintLayout>