<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.general.Login">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="129dp"
        android:layout_height="128dp"
        android:contentDescription="@string/logo_principal"
        android:src="@drawable/logoprincipal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17000002" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:hint="Usurario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.13">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passw"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/person_palorosa"
            android:textColorHint="#757575"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="305dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:hint="Contraseña"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="0.06999999">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pasword_text"
            android:inputType="textPassword"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/e_mail_icon"
            android:textColorHint="#757575"
            android:textSize="15sp"
            tools:ignore="TextContrastCheck"
            tools:layout_editor_absoluteX="85dp"
            tools:layout_editor_absoluteY="305dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/login"
        android:padding="6dp"
        android:paddingEnd="10dp"
        android:paddingStart="10dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintVertical_bias="0.120000005" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:text="@string/si_aun_no_tiene_una_cuenta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.110000014" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="19dp"

        android:text="@string/contacte_con_el_administrador"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView"
        app:layout_constraintVertical_bias="0.120000005" />





</androidx.constraintlayout.widget.ConstraintLayout>